Examples/2024-05-arbitrum-foundation/result/slither_contracts/IRollupAdmin.txt
'forge config --json' running
'/Users/tanzezhong/.solc-select/artifacts/solc-0.8.17/solc-0.8.17 --version' running
'/Users/tanzezhong/.solc-select/artifacts/solc-0.8.17/solc-0.8.17 @openzeppelin/contracts-upgradeable/=node_modules/@openzeppelin/contracts-upgradeable/ @openzeppelin/contracts/=node_modules/@openzeppelin/contracts/ @offchainlabs/upgrade-executor/=node_modules/@offchainlabs/upgrade-executor/ @ensdomains/=node_modules/@ensdomains/ eth-gas-reporter/=node_modules/eth-gas-reporter/ forge-std/=node_modules/forge-std/ hardhat-deploy/=node_modules/hardhat-deploy/ hardhat/=node_modules/hardhat/ /Users/tanzezhong/GPT4Bugs-main/Examples/2024-05-arbitrum-foundation/src/rollup/IRollupAdmin.sol --combined-json abi,ast,bin,bin-runtime,srcmap,srcmap-runtime,userdoc,devdoc,hashes --optimize --optimize-runs 2000 --evm-version london --allow-paths .,/Users/tanzezhong/GPT4Bugs-main/Examples/2024-05-arbitrum-foundation/src/rollup' running
Compilation warnings/errors on /Users/tanzezhong/GPT4Bugs-main/Examples/2024-05-arbitrum-foundation/src/rollup/IRollupAdmin.sol:
Error: Source file requires different compiler version (current compiler is 0.8.17+commit.8df45f5f.Darwin.appleclang) - note that nightly builds are considered to be strictly less than the released version
 --> node_modules/@openzeppelin/contracts-upgradeable/proxy/utils/Initializable.sol:4:1:
  |
4 | pragma solidity ^0.8.20;
  | ^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source file requires different compiler version (current compiler is 0.8.17+commit.8df45f5f.Darwin.appleclang) - note that nightly builds are considered to be strictly less than the released version
 --> node_modules/@openzeppelin/contracts/token/ERC20/utils/SafeERC20.sol:4:1:
  |
4 | pragma solidity ^0.8.20;
  | ^^^^^^^^^^^^^^^^^^^^^^^^


ERROR:Slither:Unable to compile all targets.
